# ecommerce-price-updater

./: .gitignore  README.md  items.xlsx  main.py  pyproject.toml  requirements.txt  sample.xlsx
