[tool.poetry]
name = "ecommerce-price-updater"
version = "0.1.0"
description = ""
authors = ["CHIDA <iam.yeongbin.jo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
parsel = "^1.9.1"
pandas = "^2.2.2"
openpyxl = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
